live-examples/css-examples/basic-box-model/overscroll-behavior.css
.example-container {
    width: 35em;
    height: 18em;
    border: medium dotted;
    padding: 0.75em;
    text-align: left;
    overflow: auto;
    display: flex;
}

.box {
    width: 50%;
}

#example-element {
    width: 50%;
    height: 12em;
    border: medium dotted #1b76c4;
    padding: 0.3em;
    margin: 0 0.3em;
    text-align: left;
    overflow: auto;
    overscroll-behavior: contain;
}

